2015-11-26  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-sim.h (epiphanybf_fetchable_p): New function.
	* epiphany.c (epiphanybf_external_fetch_allowed_p): New function.
	* sim-if.c (enum epiphany_options): Add E_OPTION_EXTERNAL_FETCH.
	(options_epiphany): Add E_OPTION_EXTERNAL_FETCH entry.
	(epiphany_option_handler): Handle E_OPTION_EXTERNAL_FETCH,
	* sim-main.h (struct sim_state): Add external_fetch boolean.

2015-11-25  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphany_gie): Add insn_is_idle parameter.
	* epiphany-sim.h (epiphany_gie): Adjust function prototype.

2015-11-20  Ola Jeppsson  <ola@adapteva.com>

	* dv-epiphany_dma.c (epiphany_dma_hw_event_callback): Add raised
	interrupts to trace.
	* sim-main.h (SIM_ENGINE_HALT_HOOK): Warn if an peripheral is still
	active.

2015-11-18  Ola Jeppsson  <ola@adapteva.com>

	* configure: Regenerate.

2015-11-18  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac (SIM_AC_OPTION_HARDWARE): Add
	"epiphany_dma" to hardware list.
	* dv-epiphany_timer.c: New file.
	* epiphany-sim.h: Add function prototypes for
	epiphany_timer_set_cfg and epiphany_timer_active_p.
	* epiphany.c (epiphanybf_set_config): Call
	epiphany_timer_set_cfg.
	(epiphany_any_periphal_active_p): Call epiphany_timer_active_p.
	* sim-if.c (sim_open): Add timer hardware.

2015-11-17  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-sim.h (GET_H_SM) (GET_H_CR) (GET_H_PSW)
	(GET_H_ACCUM): Remove macros.
	* epiphany.c (epiphany_decode_gdb_ctrl_regnum): Remove
	function.
	(epiphanybf_h_cr_get_handler): Remove function.
	(epiphanybf_h_cr_set_handler): Remove function.
	* sim-if.c (sim_open): Remove dead code.
	* traps.c (syscall_read_mem): Remove function.
	(syscall_write_mem): Remove function.

2015-11-17  Ola Jeppsson  <ola@adapteva.com>

	* dv-epiphany_dma.c (epiphany_dma_load_desc): Set curr_ptr in
	status to current descriptor.
	(epiphany_dma_hw_event_callback): After loading a descriptor, set